--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-loading-template": "^1.3.2",
         "vue-router": "^3.4.3",
         "vue-template-compiler": "^2.6.10",
+        "vuejs-paginate": "^2.1.0",
         "vuex": "^3.5.1"
     }
 }
