--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "vue": "^2.5.17",
         "vue-loading-template": "^1.3.2",
         "vue-router": "^3.4.3",
+        "vue-star-rating": "^1.6.1",
         "vue-template-compiler": "^2.6.10",
+        "vue-toasted": "^1.1.28",
         "vuejs-paginate": "^2.1.0",
         "vuex": "^3.5.1"
     }
