--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass": "^1.20.1",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
+        "vue-avatar-cropper": "^1.0.7",
         "vue-loading-template": "^1.3.2",
         "vue-router": "^3.4.3",
         "vue-star-rating": "^1.6.1",
